# bio_models

hsap/: .gitignore  Makefile  README.md  README_PROJECT_REPRODUCIBILITY.md  STATUS.md  release_check.sh  requirements.txt
hsap/arxiv/: PAPER_STATUS.md  README.md
hsap/arxiv/code/: README.md  pyproject.toml
hsap/arxiv/code/configs/: crowding_sink.yaml  disease_pressure.yaml  ga_search.yaml  predator_scarce.yaml
hsap/arxiv/code/hsap/hsap/: ablation_models.py  endocrine.py  entities.py  ga.py  metrics.py  null_models.py  reproduction.py  scenarios.py  simulation.py
hsap/arxiv/code/scripts/: run_null_ablation_suite.py
hsap/arxiv/latex/: hsap.tex  references.bib
hsap/arxiv/manuscript/: MASTER_DRAFT.md  abstract.md  conclusion.md  discussion.md  experimental_design.md  introduction.md  main.md  methods.md  (+1 more)
hsap/configs/: baseline.yaml
hsap/docs/: falsification_criteria.md  full_formulation.md  hsap_hypothesis.md  hsap_model_plan.md  literature_notes.md  model_time_units.md  pipeline_checklist.md
hsap/hsap_visualization_release/: LICENSE  README.md  metadata.json
hsap/scripts/: check_figures.py  check_offline_release.py  check_visualization_consistency.py  embed_hsap_data.py  export_visual_trace.py  export_visualization_data.py  generate_arxiv_figures.py  make_paper_figures.py  make_report.py  run_baseline.py  run_ga_search.py  run_paper_experiments.py  run_paper_ga.py  run_paper_pipeline.sh  run_paper_sensitivity.py  run_resumable_pipeline.py  run_scenario_grid.py  run_sensitivity.py  test_visual_state.py
hsap/web/: hsap_visual_simulation.html  web_audit.md
(+67 files in other folders)
